--- a/lesson01/styles/media-query-large.css
+++ b/lesson01/styles/media-query-large.css
@@ -1,10 +1,11 @@
-header {
-    background-color: #000000;
-    color: white;
-}
+@media screen and (min-width: 500px) {
 
-main {
-    grid-template-columns: 1fr 1fr;
-}
+    header {
+        background-color: #000000;
+        color: white;
+    }
 
-@media screen and (min-width: 500px)
+    main {
+        grid-template-columns: 1fr 1fr;
+    }
+}
