--- a/lesson02/styles/design.css
+++ b/lesson02/styles/design.css
@@ -1,46 +1,57 @@
 body {
-	font-family: Roboto, helvetica, sans-serif;
-}
-
-header,
-main,
-footer {
-	max-width: 760px;
-	margin: 0 auto;
-}
-
-h1 {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	font-size: 20px;
+	font-family: "Roboto", Ubuntu, sans-serif;
 }
 
 main {
+	max-width: 767px;
+	margin: 0 auto;
 	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	column-gap: 30px;
+	font-size: 20px;
 }
 
-h2 {
-	color: navy;
-	text-align: left;
-    grid-column: 1/3;
-}
-
-article p {
-	text-align: justify;
-    grid-column: 1/3;
-}
-
-ul {
-    grid-column: 1/3;
-}
-
-.callout {
-	color: #e1873d;
+main section {
+	margin: 0.5rem;
+	border: 3px solid white;
+	padding: 0 1rem;
 	background-color: #5c3755;
-    padding: 1rem;
+	color: white
 }
 
-footer {
-	margin-top: 1rem;
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
-	font-size: smaller;
-	text-align: left;
+main section h2 {
+	font-family: 'Garamond', 'Lucida Bright', sans-serif;
+}
+
+h1{
+    text-align: center;
+	background-color: #e1873d;
+	padding: 20px;
+}
+
+h3{
+	background-color: #e1873d;
+	padding: 10px;
+}
+
+img {
+	max-width: 100%;
+	height: auto;
+}
+
+body {
+	background-color: lightblue;
+}
+
+footer{
+	text-align: center;
+	font-family: 'Roboto', Helvetica, sans-serif;
+	background-color: #5c3755;
+	color:white;
+	padding: 1px
+}
+
+a:hover {
+	background-color: yellow;
 }
