--- a/styles/base.css
+++ b/styles/base.css
@@ -31,7 +31,7 @@ ul.a {
     border-style: solid;
     padding: 40px;
     font-family: 'Roboto', Helvetica, sans-serif;
-    background-color: #5c3755;
+    background-color: #36454f;
     color: white;
 }
 
@@ -50,7 +50,7 @@ nav{
    border-style: solid;
    padding: 40px;
    font-family: 'Roboto', Helvetica, sans-serif;
-   background-color: #5c3755;
+   background-color: #36454f;
    color: white;
 }
 
@@ -73,6 +73,10 @@ body {
 }
 
 /* mobile **************************/
+body {
+    background-color: lightblue;
+}
+
 header {
 	display: flex;
 	align-items: center;
@@ -85,6 +89,48 @@ main {
 	max-width: 767px;
 	margin: 0 auto;
 }
+
+#menu::before {
+	content: "≡";
+}
+
+nav {
+	background-color: #36454f;
+}
+
+.nav {
+	list-style: none;
+	margin: 0 auto;
+	max-width: 760px;
+}
+
+.nav li {
+	display: none;
+}
+.nav a {
+	display: block;
+	padding: 0.75rem;
+	text-align: left;
+	text-decoration: none;
+	color: black;
+	font-weight: 700;
+	transition: 0.5s;
+	font-size: clamp(1rem, 2vmin, 1.5rem);
+}
+
+.nav a:hover, navigation a:active {
+	color: white;
+	background-color: black;
+}
+
+.show li {
+	display: block;
+}
+
+#menu.show::before {
+	content: "X";
+}
+
 
 h1 {
 	font-size: 2rem;
