--- a/styles/larger.css
+++ b/styles/larger.css
@@ -37,7 +37,7 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #5c3755;
+        background-color: #36454f;
         color: white;
    }
  
@@ -56,14 +56,14 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #5c3755;
+       background-color: #36454f;
        color: white;
    }
 
  footer {
         text-align: center;
         list-style-type: none;
-        background-color: #5c3755;
+        background-color: #36454f;
         font-family: 'Roboto', Helvetica, sans-serif;
     }
 }
@@ -106,7 +106,7 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #5c3755;
+        background-color: #36454f;
         color: white;
    }
  
@@ -125,7 +125,7 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #5c3755;
+       background-color: #36454f;
        color: white;
    }
 
@@ -177,7 +177,7 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #5c3755;
+        background-color: #36454f;
         color: white;
    }
  
@@ -196,7 +196,7 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #5c3755;
+       background-color: #36454f;
        color: white;
    }
 
@@ -247,7 +247,7 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #5c3755;
+        background-color: #36454f;
         color: white;
    }
  
@@ -266,7 +266,7 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #5c3755;
+       background-color: #36454f;
        color: white;
    }
 
