--- a/styles/base.css
+++ b/styles/base.css
@@ -31,8 +31,15 @@ ul.a {
     border-style: solid;
     padding: 40px;
     font-family: 'Roboto', Helvetica, sans-serif;
-    background-color: #36454f;
+    background-color: #3a0314;
     color: white;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 
@@ -50,14 +57,13 @@ nav{
    border-style: solid;
    padding: 40px;
    font-family: 'Roboto', Helvetica, sans-serif;
-   background-color: #36454f;
-   color: white;
+   background-color: #3a0314;
 }
 
 footer {
     text-align: center;
     list-style-type: none;
-    background-color: #5c3755;
+    background-color: #3a0314;
     font-family: 'Roboto', Helvetica, sans-serif;
     color:white;
 }
@@ -69,93 +75,172 @@ footer {
 }
 
 body {
-	font-family: "Sansita", sans-serif;
+    background-color: lightblue;
+	font-family: "Roboto", sans-serif;
 }
+
 
 /* mobile **************************/
-body {
-    background-color: lightblue;
-}
-
-header {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 20px;
-}
-
-header,
-main {
-	max-width: 767px;
-	margin: 0 auto;
-}
-
-#menu::before {
-	content: "≡";
-}
-
-nav {
-	background-color: #36454f;
-}
-
-.nav {
-	list-style: none;
-	margin: 0 auto;
-	max-width: 760px;
-}
-
-.nav li {
-	display: none;
-}
-.nav a {
-	display: block;
-	padding: 0.75rem;
-	text-align: left;
-	text-decoration: none;
-	color: black;
-	font-weight: 700;
-	transition: 0.5s;
-	font-size: clamp(1rem, 2vmin, 1.5rem);
-}
-
-.nav a:hover, navigation a:active {
-	color: white;
-	background-color: black;
-}
-
-.show li {
-	display: block;
-}
-
-#menu.show::before {
-	content: "X";
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+    body {
+        background-color: lightblue;
+        font-family: "Roboto", sans-serif;
+    }
+    
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+    }
+    
+    header,
+    main {
+        max-width: 767px;
+        margin: 0 auto;
+    }
+    
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    body {
+        font-family: Roboto, sans-serif;
+    }
 }
 
 
-h1 {
-	font-size: 2rem;
+/* Mobile View ***************/
+/* Extra Small Devices, Phones */ 
+@media only screen and (min-width : 480px) {
+    #menu {
+        display: block;
+        text-decoration: none;
+        padding: .5rem .75rem;
+        color: #000;
+    }
+    
+    #menu::before {
+        content: "≡";
+    }
+    
+    .navigation {
+        list-style: none;
+        margin: 0 auto;
+        max-width: 760px;
+    }
+    
+    .navigation li {
+        display: none;
+    }
+    .navigation a {
+        display: block;
+        padding: 0.75rem;
+        text-align: left;
+        text-decoration: none;
+        color: black;
+        font-weight: 700;
+        transition: 0.5s;
+        font-size: clamp(1rem, 2vmin, 1.5rem);
+    }
+    
+    .navigation a:hover, navigation a:active {
+        color: white;
+        background-color: black;
+    }
+    
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #4054b4;
+        width:100%;
+        left: 0;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    }
+    
+    .show li {
+        display: block;
+    }
+    
+    #menu.show::before {
+        content: "X";
+    }
 }
 
-nav {
-	background-color: #36454f;
-	margin: 0 auto;
-	max-width: 800px;
-}
-nav ul {
-	list-style-type: none;
-}
-nav a {
-	display: block;
-	color: #fff;
-	text-align: center;
-	padding: 1rem;
-	text-decoration: none;
-}
 
-nav a:hover {
-	border: 1px solid #fff;
-}
+/* Media Query for wider than mobile viewports. Breakpoint should be based upon the design and content and use em units to be relative to the user's font size versus fixed with pixels.*/
+@media only screen and (min-width: 40em) {
+	.navigation {
+		display: flex;
+	}
 
-.active {
-	color: yellow;
+	.navigation li {
+		display: block; /* change state in small view */
+		flex: 1 1 100%;
+	}
+
+	.navigation a {
+		text-align: center;
+	}
+
+	#menu {
+		display: none;
+	}
+
+    nav {
+        background-color: #3a0314;
+        padding: 40px;
+    }
+    
+    .nav {
+        list-style: none;
+        margin: 0 auto;
+        max-width: 760px;
+    }
+    
+    .nav li {
+        display: none;
+    }
+    
+    .nav a {
+        display: block;
+        padding: 0.75rem;
+        text-align: left;
+        text-decoration: none;
+        color: black;
+        font-weight: 700;
+        transition: 0.5s;
+        font-size: clamp(1rem, 2vmin, 1.5rem);
+    } 
+    
+    h1 {
+        font-size: 2rem;
+    }
+    
+    nav {
+        background-color: #3a0314;
+        margin: 0 auto;
+        max-width: 800px;
+    }
+    nav ul {
+        list-style-type: none;
+    }
+    
+    nav a {
+        display: block;
+        color: #fff;
+        text-align: center;
+        padding: 1rem;
+        text-decoration: none;
+    }
+    
+    nav a:hover {
+        border: 1px solid #fff;
+    }
+    
+    .active {
+        color: yellow;
+    }
 }
