--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,4 +1,11 @@
 @media screen and (min-width: 500px) {
+    #menu {
+        display: block;
+        text-decoration: none;
+        padding: .5rem .75rem;
+        color: white;
+        color: #000;
+    }
 
     body {
         background-color: lightblue;
@@ -37,7 +44,7 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #36454f;
+        background-color: #3a0314;
         color: white;
    }
  
@@ -56,16 +63,21 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #36454f;
+       background-color: #3a0314;
        color: white;
    }
 
  footer {
         text-align: center;
         list-style-type: none;
-        background-color: #36454f;
+        background-color: #3a0314;
         font-family: 'Roboto', Helvetica, sans-serif;
     }
+
+    text {
+        color:white;
+    }
+
 }
    
 @media only screen and (min-width: 768px) {
@@ -73,6 +85,10 @@
         background-color: lightblue;
     }
 
+    text {
+        color:white;
+    }
+
     #content {
         max-width: 1600px;
         margin: 0 auto;
@@ -106,7 +122,7 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #36454f;
+        background-color: #3a0314;
         color: white;
    }
  
@@ -125,14 +141,14 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #36454f;
+       background-color: #3a0314;
        color: white;
    }
 
  footer {
         text-align: center;
         list-style-type: none;
-        background-color: #5c3755;
+        background-color: #3a0314;
         font-family: 'Roboto', Helvetica, sans-serif;
     }
 } 
@@ -144,6 +160,11 @@
         background-color: lightblue;
     }
 
+    text {
+        color:white;
+    }
+
+
     #content {
         max-width: 1600px;
         margin: 0 auto;
@@ -177,7 +198,7 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #36454f;
+        background-color: #3a0314;
         color: white;
    }
  
@@ -196,14 +217,14 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #36454f;
+       background-color: #3a0314;
        color: white;
    }
 
  footer {
         text-align: center;
         list-style-type: none;
-        background-color: #5c3755;
+        background-color: #3a0314;
         font-family: 'Roboto', Helvetica, sans-serif;
     }
 } 
@@ -214,6 +235,11 @@
         background-color: lightblue;
     }
 
+    text {
+        color:white;
+    }
+
+
     #content {
         max-width: 1600px;
         margin: 0 auto;
@@ -247,7 +273,7 @@
         border-style: solid;
         padding: 40px;
         font-family: 'Roboto', Helvetica, sans-serif;
-        background-color: #36454f;
+        background-color: #3a0314;
         color: white;
    }
  
@@ -266,14 +292,14 @@
        border-style: solid;
        padding: 40px;
        font-family: 'Roboto', Helvetica, sans-serif;
-       background-color: #36454f;
+       background-color: #3a0314;
        color: white;
    }
 
  footer {
         text-align: center;
         list-style-type: none;
-        background-color: #5c3755;
+        background-color: #3a0314;
         font-family: 'Roboto', Helvetica, sans-serif;
     }
 }
