--- a/styles/base.css
+++ b/styles/base.css
@@ -51,6 +51,14 @@ img {
     object-fit: scale-down;
 }
 
+.location {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+    height: auto;
+}
+
 nav{
    text-align: center;
    list-style-type: none;
